syntax = "proto3";

package pb;

option go_package = "./pkg/pb";

import "model/order.proto";

message GetAllOrderResponse {
  int32 total = 1;
  int32 offset = 2;
  int32 limit = 3;
  repeated Order orders = 4;
}